[package]
name = "hc-rtc-sig"
version = "0.0.1"
edition = "2021"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = [ "std" ] }
event-listener = { version = "2.5.2", default-features = false }
futures = { version = "0.3.21", default-features = false, features = [ "std" ] }
lair_keystore_api = { version = "0.2.0", default-features = false }
once_cell = { version = "1.10.0", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
rcgen = { version = "0.9.2", default-features = false, features = [ "pem" ] }
ring = { version = "0.16.20", default-features = false }
rustls = { version = "0.20.4", default-features = false, features = [ "dangerous_configuration" ] }
sha2 = { version = "0.10.2", default-features = false, features = [ "std" ] }
socket2 = { version = "0.4.4", default-features = false }
sodoken = { version = "0.0.4", default-features = false }
tokio = { version = "1.19.2", default-features = false, features = [ "full" ] }
tokio-rustls = { version = "0.23.3", default-features = false }
tokio-tungstenite = { version = "0.17.1", default-features = false }
url = { version = "2.2.2", default-features = false }
